--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "v4_nestjsbase",
-  "version": "0.0.1",
+  "name": "appointment_svc",
+  "version": "0.0.2",
   "description": "",
   "author": "",
   "private": true,
@@ -28,7 +28,6 @@
   "dependencies": {
     "@nestjs/axios": "^2.0.0",
     "@nestjs/bull": "^10.0.1",
-    "@nestjs/cache-manager": "^2.1.0",
     "@nestjs/common": "^9.4.2",
     "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.4.2",
@@ -50,6 +49,8 @@
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
     "mime-types": "^2.1.29",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
     "mongoose": "^7.2.1",
     "multer": "^1.4.2",
     "nest-logger": "^6.0.0",
@@ -60,12 +61,10 @@
     "rxjs": "^7.6.0",
     "shacrypt": "github:vlasky/shacrypt",
     "swagger-ui-express": "^4.6.3",
-    "uuid": "^8.3.2",
-    "cache-manager": "^5.2.1",
-    "cache-manager-redis-yet": "^4.1.1",
-    "moment-timezone": "^0.5.43"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.19.0",
     "@nestjs/cli": "^9.5.0",
     "@nestjs/schematics": "^9.2.0",
     "@nestjs/testing": "^9.4.2",
@@ -73,15 +72,16 @@
     "@types/express": "^4.17.17",
     "@types/jest": "29.5.1",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "^20.8.9",
+    "@types/node": "^20.2.4",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
-    "eslint": "^8.41.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "globals": "^15.14.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "lint-staged": "^13.2.2",
@@ -91,7 +91,8 @@
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.2",
+    "typescript-eslint": "^8.21.0"
   },
   "jest": {
     "moduleFileExtensions": [
