feat add new functionality

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ APP_ID=1
 NODE_ENV=local
 DB_TYPE=mongodb
 
-#MONGODB_ENDPOINT=mongodb://127.0.0.1:27017/pi_calculator
-MONGODB_ENDPOINT=mongodb+srv://<username>:<password>@cluster0.k238mev.mongodb.net/?retryWrites=true&w=majority
+#MONGODB_ENDPOINT=mongodb://127.0.0.1:27017/appointment_svc
+MONGODB_ENDPOINT=mongodb+srv://<username>:<password>@cluster0.k238mev.mongodb.net/appointmentsvc?retryWrites=true&w=majority
 JWT_SECRET=<secret_key>
 INTERNAL_API_SECRET=<internal_secret_key>
